--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body::before {
     background: #1875E8;
     padding: 16px 24px;
     width: 100%;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 700;
     border: none;
     margin-top: 2rem;
@@ -80,7 +80,7 @@ body::before {
     border: none;
     color: #1875E8;
     padding: 2rem;
-    font-size: 24px;
+    font-size: 1rem;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
 }
@@ -92,7 +92,7 @@ body::before {
 
 h1 {
     font-family: 'Chakra Petch', sans-serif;
-    font-size: 72px;
+    font-size: 3.5rem;
     padding-bottom: 3rem;
 }
 
@@ -102,7 +102,7 @@ button {
 }
 
 .texto__paragrafo {
-    font-size: 32px;
+    font-size: 1.5rem;
     font-weight: 400;
 }
 
